--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Criando rotas com AngularJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "MarcosViniciusPinho <marcosjava2008@gmail.com>",
   "license": "ISC",
@@ -13,5 +14,5 @@
     "angular-route": "^1.6.6",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1"
-  }
+  }, 
 }
