--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Criando rotas com AngularJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "MarcosViniciusPinho <marcosjava2008@gmail.com>",
   "license": "ISC",
