--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "angular-route": "^1.6.6",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1"
+  },
+  "devDependencies": {
+    "ejs": "^2.3.1",
+    "express": "~4.9.x"
+  },
+  "engines": {
+    "node": "0.12.2"
   }
 }
