--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "angular": "^1.6.6",
     "angular-route": "^1.6.6",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
-  },
-  "devDependencies": {
+    "jquery": "^3.2.1",
     "ejs": "^2.3.1",
     "express": "~4.9.x"
   },
+  "devDependencies": {},
   "engines": {
-    "node": "0.12.2"
+    "node": "14.7.0"
   }
 }
